--- a/devproject/myapp/tamplates/index.html
+++ b/devproject/myapp/tamplates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
   
-{% block title %}Add New Employee Records{% endblock title %}
+{% block title %}Add New recoment{% endblock title %}
   
 {% block content %}
 <div class="col-md-12">    
