added manage.html and update

--- a/devproject/myapp/tamplates/base.html
+++ b/devproject/myapp/tamplates/base.html
@@ -12,7 +12,7 @@
 
     <style>
         body {
-            background-color: #de9ef2;
+            background-color: #FFF8C9;
             font-family: Arial, sans-serif;
             display: flex;
             align-items: center;
@@ -22,7 +22,7 @@
         }
 
         .container {
-            background-color: #78d7ea;
+            background-color: #DFCCFB;
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 4px 6px rgb(209, 2, 250);
@@ -30,10 +30,19 @@
         }
 
         .page-title {
-            background-color: #e098f8;
+            background-color: #D0BFFF;
             color: #fff;
             padding: 15px;
             border-radius: 5px;
+        }
+
+        a {
+            background-color: #BEADFA;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin: 0 10px;
         }
     </style>
 </head>
@@ -48,6 +57,7 @@
         
     {% block content %}{% endblock %}
     <a href="/about">About Us</a>
+    <a href="/manage">Manage</a>
 </div>
 
 
