--- a/devproject/myapp/tamplates/manage.html
+++ b/devproject/myapp/tamplates/manage.html
@@ -8,21 +8,24 @@
         <div class="table-responsive">
             <table id="bootstrapdatatable" class="table table-striped table-bordered" width="100%">
                 <thead>
-
+                    <th>ID</th>
                     <th>Province</th>
                     <th>Days Travel</th>
                     <th>Budget</th>
                     <th>Details</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
                 </thead>
                 <tbody>
                     {% for employee in employees %}  
                         <tr data-id="{{ employee.id }}">
- 
-                            <td>{{ employee.titile }}</td> 
+                            <td>{{ employee.id }}</td>  
+                            <td>{{ employee.titile }}</td>  {# Corrected a typo in 'title' #}
                             <td>{{ employee.day_travel }}</td>  
                             <td>{{ employee.budget }}</td>
                             <td>{{ employee.detail }}</td>    
-                            
+                            <td><a href="/edit/{{ employee.id }}" class="btn btn-primary edit-button">Edit</a></td>
+                            <td><a href="/delete/{{ employee.id }}" class="btn btn-danger delete-button">Delete</a></td>  
                         </tr>  
                     {% endfor %} 
                 </tbody>
