--- a/devproject/myapp/tamplates/about.html
+++ b/devproject/myapp/tamplates/about.html
@@ -1,5 +1,12 @@
-<html>
-    <head>
-        This is a website for recommending tourism in the province and trips.
-    </head>
-</html>
+{% extends "base.html" %}
+  
+{% block title %}Employee Records{% endblock title %}
+  
+{% block content %}
+    <div class="col-md-12">
+        <h1>Overview</h1>
+        <p>
+            This website provides travel advice for independent tourists looking to explore provinces without a guide. It aims to help travelers study the provinces they plan to visit. The site offers recommendations from locals in each province, including details such as the ideal budget, suggested number of days for the trip, and specific information like how many days to spend in a particular place, where to stay in the province, and options for car rentals to enhance convenience during the travel experience.
+        </p>
+    </div>
+{% endblock content %}
