--- a/devproject/myapp/tamplates/base.html
+++ b/devproject/myapp/tamplates/base.html
@@ -49,6 +49,7 @@
 <body>
 <div class="container">
     <div class="page-title">
+        <img src="{% static 'C:/Users/ASUS/Desktop/final project/djnago-mysql/devproject/myapp/tamplates/image/logo.png' %}">
         <h4>Welcome to Our Travel Guide</h4>
     </div>
         <p>
@@ -56,9 +57,11 @@
         </p>
         
     {% block content %}{% endblock %}
-    <a href="/about">About Us</a>
+    <a href="/">Feed</a>
     <a href="/manage">Manage</a>
+    <a href="/about">About Us</a>
 </div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
